[gd_scene load_steps=39 format=2]

[ext_resource path="res://scenes/MenuButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=2]
[ext_resource path="res://scripts/Viewer.gd" type="Script" id=3]
[ext_resource path="res://scripts/Control.gd" type="Script" id=4]
[ext_resource path="res://themes/dark.tres" type="Theme" id=5]
[ext_resource path="res://assets/zoom.svg" type="Texture" id=6]
[ext_resource path="res://assets/zoom_moins.svg" type="Texture" id=7]
[ext_resource path="res://assets/angle.svg" type="Texture" id=8]
[ext_resource path="res://assets/zoom_plus.svg" type="Texture" id=9]
[ext_resource path="res://assets/horizontal.svg" type="Texture" id=10]
[ext_resource path="res://assets/vertical.svg" type="Texture" id=11]
[ext_resource path="res://assets/ruler.svg" type="Texture" id=12]
[ext_resource path="res://scripts/Regle.gd" type="Script" id=13]
[ext_resource path="res://assets/libre_pressed.svg" type="Texture" id=14]
[ext_resource path="res://assets/ruler_pressed.svg" type="Texture" id=15]
[ext_resource path="res://assets/libre.svg" type="Texture" id=16]
[ext_resource path="res://assets/horizontal_pressed.svg" type="Texture" id=17]
[ext_resource path="res://assets/horizontal_disabled.svg" type="Texture" id=18]
[ext_resource path="res://assets/vertical_pressed.svg" type="Texture" id=19]
[ext_resource path="res://assets/vertical_disabled.svg" type="Texture" id=20]
[ext_resource path="res://themes/Toolbar.tres" type="ButtonGroup" id=21]
[ext_resource path="res://assets/angle_pressed.svg" type="Texture" id=22]
[ext_resource path="res://assets/angle_disabled.svg" type="Texture" id=23]
[ext_resource path="res://assets/libre_disabled.svg" type="Texture" id=24]
[ext_resource path="res://assets/cube.svg" type="Texture" id=25]
[ext_resource path="res://assets/cube_pressed.svg" type="Texture" id=26]
[ext_resource path="res://assets/red.tres" type="Material" id=28]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

void fragment() {
	vec3 col0 = texture(TEXTURE, UV).xyz;
	
    vec3 col = -8.0 * texture(TEXTURE, UV).xyz;
    col += texture(TEXTURE, UV + vec2(0.0, SCREEN_PIXEL_SIZE.y)).xyz;
    col += texture(TEXTURE, UV + vec2(0.0, -SCREEN_PIXEL_SIZE.y)).xyz;
    col += texture(TEXTURE, UV + vec2(SCREEN_PIXEL_SIZE.x, 0.0)).xyz;
    col += texture(TEXTURE, UV + vec2(-SCREEN_PIXEL_SIZE.x, 0.0)).xyz;
    col += texture(TEXTURE, UV + SCREEN_PIXEL_SIZE.xy).xyz;
    col += texture(TEXTURE, UV - SCREEN_PIXEL_SIZE.xy).xyz;
    col += texture(TEXTURE, UV + vec2(-SCREEN_PIXEL_SIZE.x, SCREEN_PIXEL_SIZE.y)).xyz;
    col += texture(TEXTURE, UV + vec2(SCREEN_PIXEL_SIZE.x, -SCREEN_PIXEL_SIZE.y)).xyz;
	
	if (length(col) > 0.01){
		COLOR.xyz = vec3(0.8, 0.8, 0.8);
	}else{
		COLOR.xyz = col0;
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.168627, 0.168627, 0.670588, 0 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://themes/fonts/FiraSans-Bold.ttf"

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 1
outline_color = Color( 0.215686, 0.215686, 0.219608, 1 )
font_data = SubResource( 4 )

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Toolbar/Panel/cotation:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 288, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Control/Toolbar/Panel/cotation/Horizontal:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 2.92817, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Control/Toolbar/Panel/cotation:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 288, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Shader" id=8]
code = "shader_type spatial;

const float near = 0.1; 
const float far  = 100.0;

float LinearizeDepth(float depth){
	float z = depth * 2.0 - 1.0; // back to NDC 
	return (2.0 * near * far) / (far + near - z * (far - near));
}

void fragment(){
	float depth = LinearizeDepth(FRAGCOORD.z) / far;
	
	float len = length(cross(vec3(depth), NORMAL));
	
	ALBEDO = vec3(0.66, 0.6, 0.17*len);
}"

[sub_resource type="ShaderMaterial" id=9]
shader = SubResource( 8 )

[sub_resource type="CubeMesh" id=10]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="Environment" id=11]
background_mode = 1
background_color = Color( 0.45098, 0.490196, 0.501961, 1 )

[node name="ViewportContainer" type="ViewportContainer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 1600, 900 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Spatial" type="Spatial" parent="Viewport"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="Viewport/Spatial"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="Viewport/Spatial/Control"]
margin_right = 247.0
margin_bottom = 115.0
rect_min_size = Vector2( 0, 64 )
theme = ExtResource( 5 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuButton" parent="Viewport/Spatial/Control/ScrollContainer" instance=ExtResource( 1 )]
margin_bottom = 64.0
rect_min_size = Vector2( 200, 64 )
align = 1

[node name="Toolbar" type="Control" parent="Viewport/Spatial/Control"]
anchor_right = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Control" parent="Viewport/Spatial/Control/Toolbar"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -320.0
margin_right = 448.0
margin_bottom = 64.0
theme = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cotation" type="Panel" parent="Viewport/Spatial/Control/Toolbar/Panel"]
margin_right = 352.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ruler" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/cotation"]
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
theme = ExtResource( 5 )
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Horizontal" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/cotation"]
margin_left = 64.0
margin_right = 128.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
disabled = true
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 17 )
texture_disabled = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/cotation"]
margin_left = 128.0
margin_right = 768.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
disabled = true
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 19 )
texture_disabled = ExtResource( 20 )

[node name="Libre" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/cotation"]
margin_left = 192.0
margin_right = 832.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
disabled = true
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 16 )
texture_pressed = ExtResource( 14 )
texture_disabled = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Angle" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/cotation"]
margin_left = 256.0
margin_right = 896.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
disabled = true
toggle_mode = true
group = ExtResource( 21 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 22 )
texture_disabled = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="zoom" type="Panel" parent="Viewport/Spatial/Control/Toolbar/Panel"]
margin_left = 352.0
margin_right = 704.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zoom_Init" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/zoom"]
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="Zoom_Plus" type="Button" parent="Viewport/Spatial/Control/Toolbar/Panel/zoom"]
margin_left = 64.5297
margin_top = 0.529724
margin_right = 96.5297
margin_bottom = 64.5297
rect_min_size = Vector2( 32, 64 )
icon = ExtResource( 9 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VSlider" type="HSlider" parent="Viewport/Spatial/Control/Toolbar/Panel/zoom"]
margin_left = 96.0
margin_right = 320.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
theme = ExtResource( 5 )
min_value = 0.1
max_value = 0.8
step = 0.001
value = 0.1
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Zoom_Moins" type="Button" parent="Viewport/Spatial/Control/Toolbar/Panel/zoom"]
margin_left = 320.0
margin_right = 352.0
margin_bottom = 64.0
rect_min_size = Vector2( 32, 64 )
icon = ExtResource( 7 )
flat = true
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="X-ray" type="Panel" parent="Viewport/Spatial/Control/Toolbar/Panel"]
margin_left = 704.0
margin_right = 768.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transparence" type="TextureButton" parent="Viewport/Spatial/Control/Toolbar/Panel/X-ray"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
rect_scale = Vector2( 0.1, 0.1 )
toggle_mode = true
texture_normal = ExtResource( 25 )
texture_pressed = ExtResource( 26 )

[node name="Regle" type="Control" parent="Viewport/Spatial/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = -20.0
margin_bottom = -20.0
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="A" type="TextureButton" parent="Viewport/Spatial/Control/Regle"]
margin_left = 10.0
margin_top = 10.0
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
mouse_default_cursor_shape = 2
action_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="B" type="TextureButton" parent="Viewport/Spatial/Control/Regle"]
margin_left = 20.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
mouse_default_cursor_shape = 2
action_mode = 0

[node name="C" type="TextureButton" parent="Viewport/Spatial/Control/Regle"]
margin_left = 20.0
margin_top = 20.0
margin_right = 52.0
margin_bottom = 52.0
rect_min_size = Vector2( 32, 32 )
mouse_filter = 1
mouse_default_cursor_shape = 2

[node name="Mesure" type="Label" parent="Viewport/Spatial/Control/Regle"]
margin_left = -16.0
margin_top = -19.0
margin_right = 4.0
margin_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 20, 32 )
custom_styles/normal = SubResource( 3 )
custom_fonts/font = SubResource( 5 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="Viewport/Spatial"]
anims/Close = SubResource( 6 )
anims/Deploy = SubResource( 7 )

[node name="StaticBody" type="StaticBody" parent="Viewport/Spatial"]

[node name="Object" type="MeshInstance" parent="Viewport/Spatial/StaticBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
material_override = SubResource( 9 )
cast_shadow = 0
mesh = SubResource( 10 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="Viewport/Spatial/StaticBody"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )

[node name="IG_vertex" type="ImmediateGeometry" parent="Viewport/Spatial/StaticBody"]
visible = false

[node name="CameraGimbal" type="Spatial" parent="Viewport/Spatial"]
script = ExtResource( 2 )

[node name="InnerGimbal" type="Spatial" parent="Viewport/Spatial/CameraGimbal"]

[node name="Camera" type="Camera" parent="Viewport/Spatial/CameraGimbal/InnerGimbal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )
projection = 1
current = true
size = 0.1
near = 0.01

[node name="RayCast" type="RayCast" parent="Viewport/Spatial/CameraGimbal/InnerGimbal/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -10 )

[node name="SpotLight" type="SpotLight" parent="Viewport/Spatial/CameraGimbal/InnerGimbal/Camera"]
spot_range = 1.46403

[node name="Tween" type="Tween" parent="Viewport/Spatial/CameraGimbal"]

[node name="Tween_zoom" type="Tween" parent="Viewport/Spatial/CameraGimbal"]

[node name="Timer" type="Timer" parent="Viewport/Spatial/CameraGimbal"]
wait_time = 0.2
one_shot = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="Viewport/Spatial"]
environment = SubResource( 11 )

[node name="IG" type="ImmediateGeometry" parent="Viewport/Spatial"]
visible = false
material_override = ExtResource( 28 )
cast_shadow = 0
[connection signal="obj_selected" from="Viewport/Spatial/Control/ScrollContainer/MenuButton" to="Viewport/Spatial" method="_on_MenuButton_obj_selected"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/cotation/Ruler" to="Viewport/Spatial/Control" method="_on_Ruler_toggled"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/cotation/Horizontal" to="Viewport/Spatial/Control/Regle" method="_on_Horizontal_toggled"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/cotation/Vertical" to="Viewport/Spatial/Control/Regle" method="_on_Vertical_toggled"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/cotation/Libre" to="Viewport/Spatial/Control/Regle" method="_on_Libre_toggled"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/cotation/Angle" to="Viewport/Spatial/Control/Regle" method="_on_Angle_toggled"]
[connection signal="button_down" from="Viewport/Spatial/Control/Toolbar/Panel/zoom/Zoom_Init" to="Viewport/Spatial/CameraGimbal" method="_on_Zoom_Init_button_down"]
[connection signal="pressed" from="Viewport/Spatial/Control/Toolbar/Panel/zoom/Zoom_Plus" to="Viewport/Spatial/CameraGimbal" method="_on_Zoom_Plus_pressed"]
[connection signal="value_changed" from="Viewport/Spatial/Control/Toolbar/Panel/zoom/VSlider" to="Viewport/Spatial/CameraGimbal" method="_on_VSlider_value_changed"]
[connection signal="pressed" from="Viewport/Spatial/Control/Toolbar/Panel/zoom/Zoom_Moins" to="Viewport/Spatial/CameraGimbal" method="_on_Zoom_Moins_pressed"]
[connection signal="toggled" from="Viewport/Spatial/Control/Toolbar/Panel/X-ray/Transparence" to="Viewport/Spatial/Control" method="_on_Transparence_toggled"]
[connection signal="button_down" from="Viewport/Spatial/Control/Regle/A" to="Viewport/Spatial/Control/Regle" method="_on_A_button_down"]
[connection signal="button_up" from="Viewport/Spatial/Control/Regle/A" to="Viewport/Spatial/Control/Regle" method="_on_A_button_up"]
[connection signal="button_down" from="Viewport/Spatial/Control/Regle/B" to="Viewport/Spatial/Control/Regle" method="_on_B_button_down"]
[connection signal="button_up" from="Viewport/Spatial/Control/Regle/B" to="Viewport/Spatial/Control/Regle" method="_on_B_button_up"]
[connection signal="button_down" from="Viewport/Spatial/Control/Regle/C" to="Viewport/Spatial/Control/Regle" method="_on_C_button_down"]
[connection signal="button_up" from="Viewport/Spatial/Control/Regle/C" to="Viewport/Spatial/Control/Regle" method="_on_C_button_up"]
[connection signal="zoom_value" from="Viewport/Spatial/CameraGimbal" to="Viewport/Spatial/Control" method="_on_CameraGimbal_zoom_value"]
